--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 Вы наконец вспомните ощущение "свободной головы", ощутите прилив
                 физических сил и вспомните, что такое счастье.
               </div>
-              <div class="description-btn">Узнать подробнее</div>
+              <div class="description-btn" id = "morebtn">Узнать подробнее</div>
             </div>
             <div class="photo">
               <img src="img/sunset.jpg" alt="sunset" />
