--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 Вы наконец вспомните ощущение "свободной головы", ощутите прилив
                 физических сил и вспомните, что такое счастье.
               </div>
-              <div class="description-btn" id = "morebtn">Узнать подробнее</div>
+              <div class="description-btn" id="morebtn">Узнать подробнее</div>
             </div>
             <div class="photo">
               <img src="img/sunset.jpg" alt="sunset" />
@@ -125,6 +125,8 @@
           <div class="timer-title">Успей забронировать место со скидкой</div>
           <div class="timer-action">До конца акции осталось</div>
           <div class="timer-numbers" id="timer">
+            <!-- <span class="days">5</span>
+            <span>:</span> -->
             <span class="hours">18</span>
             <span>:</span>
             <span class="minutes">20</span>
