add days to timer

--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
           <div class="timer-title">Успей забронировать место со скидкой</div>
           <div class="timer-action">До конца акции осталось</div>
           <div class="timer-numbers" id="timer">
-            <!-- <span class="days">5</span>
-            <span>:</span> -->
+            <span class="days">5</span>
+            <span>:</span>
             <span class="hours">18</span>
             <span>:</span>
             <span class="minutes">20</span>
